add factories, TeacherService, AdminController