@@ -3,6 +3,7 @@ package com.example.GradeBook.Services;
 import com.example.GradeBook.DTO.ClassDto;
 import com.example.GradeBook.DTO.GradeDto;
 import com.example.GradeBook.DTO.StudentDto;
+import com.example.GradeBook.Factories.GradeFactory;
 import com.example.GradeBook.store.entities.GradeEntity;
 import com.example.GradeBook.store.entities.StudentEntity;
 import com.example.GradeBook.store.repositories.GradeRepository;
@@ -20,6 +21,7 @@ public class StudentService {
     private final GradeRepository gradeRepository;
     private final StudentRepository studentRepository;
 
+    private GradeFactory gradeFactory;
     public List<GradeDto> getGradesForStudent(Long studentId) {
         StudentEntity student = studentRepository.findById(studentId)
                 // todo: написать свое исключение
@@ -27,14 +29,7 @@ public class StudentService {
 
         return gradeRepository.findAllByStudent(student).stream()
                 .flatMap(List::stream)
-                .map(grade -> GradeDto.builder()
-                        .gradeId(grade.getGradeId())
-                        .mark(grade.getMark())
-                        .createdAt(grade.getCreatedAt())
-                        .student(StudentDto.builder()
-                                .id(grade.getStudent().getId())
-                                .build())
-                        .build())
-                .collect(Collectors.toList());
+                .map(gradeFactory::makeGradeDto)
+                .toList();
     }
 }
